@@ -1,47 +1,50 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA512
 
-AUX 3.0.17-file-caching.patch 500 RMD160 b0273ef2f2665bc9b9618d19294c7bf336ff9e13 SHA1 fc701683090d50e5f28ef38ec322b502ea74131c SHA256 6b15cf3064be67871489446f2ad3c3ce4eb1f5912d70f79fd2148ffb1261e9c6
-AUX 3.1.10-file-caching.patch 500 RMD160 b0273ef2f2665bc9b9618d19294c7bf336ff9e13 SHA1 fc701683090d50e5f28ef38ec322b502ea74131c SHA256 6b15cf3064be67871489446f2ad3c3ce4eb1f5912d70f79fd2148ffb1261e9c6
-AUX 3.2.11-file-caching.patch 500 RMD160 b0273ef2f2665bc9b9618d19294c7bf336ff9e13 SHA1 fc701683090d50e5f28ef38ec322b502ea74131c SHA256 6b15cf3064be67871489446f2ad3c3ce4eb1f5912d70f79fd2148ffb1261e9c6
-AUX file-caching.patch 500 RMD160 b0273ef2f2665bc9b9618d19294c7bf336ff9e13 SHA1 fc701683090d50e5f28ef38ec322b502ea74131c SHA256 6b15cf3064be67871489446f2ad3c3ce4eb1f5912d70f79fd2148ffb1261e9c6
-DIST deblob-3.0 102531 RMD160 d3ea6f04cd4d6c7f652f4532e7558f931d3952d1 SHA1 3702cec9da20b8c1141e0fee2549fd475e203812 SHA256 4c9d98faabc226602891e6eb36634f1c228017bb90f0d3ceaa42d41d4b27df0f
-DIST deblob-3.1 103909 RMD160 723d36ef2574419417bbf30eda6a83aaa91922d7 SHA1 39d2c6e69f4e3b84e112b6e3e9389c983976fe4b SHA256 9dcf6f981cb3681f8afab0a4f814aebd6c2f46f8e635d2f35657d8344ef6b30e
-DIST deblob-3.2 107602 RMD160 56f1dfe4f0254c802b49ea5220c4f67e56649852 SHA1 83421184d88d02e24de2adbc5debfb03454a7f4b SHA256 5db88405af6d51a77d84354afc3b2bdf673b1a5dcff37bb8db4ccbd12d91db20
+AUX 3.0.17-file-caching.patch 500 SHA256 6b15cf3064be67871489446f2ad3c3ce4eb1f5912d70f79fd2148ffb1261e9c6 SHA512 7218feb7ddf0d6ecb11cc4b9cfbe1208e8d963be481fa71f227e47b4cceb0341324bcd876a233dd7082544af76c45e4c457ad666000fb13d2555d07de45c193f WHIRLPOOL 68100510e89950257150d048d07daaf02e80f35ff9b6df73499fd2124c839a7ec4e316682d2439727dbc716e28ff647845af4533e0e83df3ac4194f5085e0a23
+AUX 3.1.10-file-caching.patch 500 SHA256 6b15cf3064be67871489446f2ad3c3ce4eb1f5912d70f79fd2148ffb1261e9c6 SHA512 7218feb7ddf0d6ecb11cc4b9cfbe1208e8d963be481fa71f227e47b4cceb0341324bcd876a233dd7082544af76c45e4c457ad666000fb13d2555d07de45c193f WHIRLPOOL 68100510e89950257150d048d07daaf02e80f35ff9b6df73499fd2124c839a7ec4e316682d2439727dbc716e28ff647845af4533e0e83df3ac4194f5085e0a23
+AUX 3.2.11-file-caching.patch 500 SHA256 6b15cf3064be67871489446f2ad3c3ce4eb1f5912d70f79fd2148ffb1261e9c6 SHA512 7218feb7ddf0d6ecb11cc4b9cfbe1208e8d963be481fa71f227e47b4cceb0341324bcd876a233dd7082544af76c45e4c457ad666000fb13d2555d07de45c193f WHIRLPOOL 68100510e89950257150d048d07daaf02e80f35ff9b6df73499fd2124c839a7ec4e316682d2439727dbc716e28ff647845af4533e0e83df3ac4194f5085e0a23
+AUX file-caching.patch 500 SHA256 6b15cf3064be67871489446f2ad3c3ce4eb1f5912d70f79fd2148ffb1261e9c6 SHA512 7218feb7ddf0d6ecb11cc4b9cfbe1208e8d963be481fa71f227e47b4cceb0341324bcd876a233dd7082544af76c45e4c457ad666000fb13d2555d07de45c193f WHIRLPOOL 68100510e89950257150d048d07daaf02e80f35ff9b6df73499fd2124c839a7ec4e316682d2439727dbc716e28ff647845af4533e0e83df3ac4194f5085e0a23
+DIST deblob-3.0 102531 SHA256 4c9d98faabc226602891e6eb36634f1c228017bb90f0d3ceaa42d41d4b27df0f SHA512 839e383ea507e99a94cc5d13faffc43c30e01e323189fd821b86cdbf8f63d4cbb33a6163517cc616f6f1149afcb3384b53d375b9a3a3570008f6a08c89340a45 WHIRLPOOL 8578f07e831f28a07d09188ace287e90401d9deb8bd56e39ccdcd2893663ccf303cba58d44e0197b31ddf101ea2b9aff43cd3100defbe109a54ed7f6f86d5665
+DIST deblob-3.1 103909 SHA256 9dcf6f981cb3681f8afab0a4f814aebd6c2f46f8e635d2f35657d8344ef6b30e SHA512 e30b669dd959a7a54ae0bfefc5e62aa99270f9b7e160cfb2b91d35b4c2ebb915e371c85f2fefdb96bfbbdb5027ec3c6d43988015d183e7539b545deb0b573d34 WHIRLPOOL b56e253c35945193b65ab5d38434c6327182bdb5485ca62af95e06b0e63bc21a8809c380e2ca692219c65d37e041d9eaf85dc128d3205bb215124ca463b49df5
+DIST deblob-3.2 107602 SHA256 5db88405af6d51a77d84354afc3b2bdf673b1a5dcff37bb8db4ccbd12d91db20 SHA512 f34b7128adf716c908cbbbfefe72149fcd88b727d27edab43be65d4e6a55112b6d937d5c2bed86454d58781f3766ba4cc6db668cb6174a6039d276499da37cb4 WHIRLPOOL 0922457f7ca413c9d8115182964a7c051560799c4724452f81cb4c0383cf62c45b0364d6e639bd9d2b9000411d8773cabd2e8af99e8b0dc7f7bdc886db432d6d
 DIST deblob-3.3 107222 RMD160 2796d93a1a0e3034af752ac8684f935cfeff024c SHA1 787e17b058a678f54a4f951510206bc8d72c3d5c SHA256 09a4ee54faf7d96a9ca150bfa3a7a2234d589457bac40f03a6e19b5774b1ef5c
-DIST deblob-3.4 109026 RMD160 ef9be1bdfbca2bfe4d5e60dd33ed6ec30a1e5c52 SHA1 83b455ad2db0470704225d1e81864af8fd3516c3 SHA256 2fca296bccfa7dc25447f36975971597f67730168a9bc4db0853e55347950680
-DIST deblob-check-3.0 377076 RMD160 8a4f53f0a34c46fc6a2aae5878225851d7bf13e1 SHA1 b1b356f55f63746bba284644db8585d15f3da06f SHA256 72ab3f74cbcde9d453f8a4e30fd6a6339812806fe6dab3b632c1c68b90b0b104
-DIST deblob-check-3.1 405438 RMD160 da7efe959bc7c0017214daa764fcb486ff4434f2 SHA1 397157d3f6bf225f8cc4f48b6c05bc56482c2934 SHA256 77d125ae5466049fb3f1fe39ddb9320b66239de782a348c66133de591049db43
-DIST deblob-check-3.2 423268 RMD160 8cb0c1b4a289db94543396c4445c4c7a35d2ba70 SHA1 01e50f824a577d15749f24643fdd136180342808 SHA256 9e67dd0885aa8ef356dbc15d487c8dea5a54f74c5b03a5d7946b65ee43f12638
+DIST deblob-3.4 109026 SHA256 2fca296bccfa7dc25447f36975971597f67730168a9bc4db0853e55347950680 SHA512 7e6263e265dba957e966b76366566c5b318322c33ec60c9f268af1a375271cd1c1232749902832554f93451225bf61c967f314a48c2890984974d30a984d2e01 WHIRLPOOL f3d8d76078b4a372277926d1d4f3d449968acd64e57a5fbe8fc1c3057e8a9893ba1d580418598089977bb808d9a351de04181dd7f73395e99b306ba8d4886160
+DIST deblob-check-3.0 377076 SHA256 72ab3f74cbcde9d453f8a4e30fd6a6339812806fe6dab3b632c1c68b90b0b104 SHA512 c06b3c0e33a00c91247742c6a50a4f85038477b4d89851f33b1f1f49d4b01143268ba8d6f489f77fcd895c7110a7fe2ff831e0afa7fbd3137cb23cebb433ac84 WHIRLPOOL 61f61effbabb37b6e28e5a44737d7e8f5dbbaa20915464972921b47b8814e641bc7088c2d15bcbc93ef815ec9e8db7246e05232e64c0b70850e39f10f4e8fd7d
+DIST deblob-check-3.1 405438 SHA256 77d125ae5466049fb3f1fe39ddb9320b66239de782a348c66133de591049db43 SHA512 6a5763710db1e00a346fe517f329083a676131a289b95860399da82bf4383103e963cf6b2e3d1d12590337f5885bfabb8d7985ed9a47e3619a1f8d87c976f3d1 WHIRLPOOL cb18838ff1f5993f6ce419c52b82d318e7ebf4bd1d7b3809812e441c630c642745add6fe34eb4e530f3535db39320941c20308a7d633328fd1109f54cbc7b301
+DIST deblob-check-3.2 423268 SHA256 9e67dd0885aa8ef356dbc15d487c8dea5a54f74c5b03a5d7946b65ee43f12638 SHA512 3abb9968ef4750fda90e4e2283981fd4691b7f9854244413b31d17bb60382a6d809fec929d8d3f9b52397dd9f9fa26783f4c3a25f3f4115b76ed585ea68e9916 WHIRLPOOL 891c3f809af470d680ae896c843c09612fb5124f2805e03d67b28ec4353bff0bc346ae9f680d900f0f63e681be86a0195f9baab7dcf3b5accfda739b106766fa
 DIST deblob-check-3.3 427140 RMD160 98998624c083205452cdc22df60d60d06b807315 SHA1 61161f84859542cd3bfe8e961fc75bf6f72031f7 SHA256 ed8fab94c7f01d89a3007135a1260553b71fa1d8e0b4e42bdecb3ffbba81b3fd
-DIST deblob-check-3.4 448778 RMD160 a00d430d137cd9d653a3c42cb36c6e31330ed007 SHA1 4d54aa271cebc0e770e152802f4cadf0dcc9471e SHA256 28ce952c082e765784f9e5b63f5a3a4fb93545e5e788dc94d094c0b3ae8ea3a0
-DIST genpatches-3.0-18.base.tar.bz2 418620 RMD160 3a75def72f7c18b623237e2b03a64c5dc751f219 SHA1 640de4375675190626e0fb2e3a2e6cdb5d1b631d SHA256 f530f6caae05a06ae04817e4ce3e696154571f219446e20d404addc9208cce79
-DIST genpatches-3.0-18.extras.tar.bz2 17193 RMD160 8eac4d558555912c08748a224b0bee04f9abd93f SHA1 542b36e0b8c712dfe06951f08e4c5fd83f3cf5fa SHA256 86c7a9d4ee419f21b63bfa23b52feb9c4b547a1b29498a752620336776aaff91
-DIST genpatches-3.1-10.base.tar.bz2 180217 RMD160 2817a9d111441d2584e4e1b1b8e7d669e96acc63 SHA1 b77f380a2d0007876d83389cbabef213bbbf09fc SHA256 d5d0b9e2689a5326028e27ef75f93253762c20e157de73d3ad856d44b6295c76
-DIST genpatches-3.1-10.extras.tar.bz2 17200 RMD160 fa8aa6ba8bc1e554758017d371769536d025bdc1 SHA1 47240cdc21d69d2af05d0b2bd7dcbb1615508f86 SHA256 b108dbf3b5ddad1701cacd2f1c936a63b60d1a4cd86fd7f9311230e3bacac56b
-DIST genpatches-3.2-11.base.tar.bz2 210269 RMD160 634409abf6d2cfdacd7c4c2a7dcebc6acf9b17ea SHA1 64bed713dfb941f699e3c32f419475fb6e10cee3 SHA256 22eb160b9c3bf1fd04f6ab5a5e481ead4054c2a42ce274354b03a34bca1bc341
-DIST genpatches-3.2-11.extras.tar.bz2 17208 RMD160 8324da51ce71afb0d375f34b0dd05209079bd7a3 SHA1 c2f4e029aebbc0ae82221aa2643de06a2d08cbd8 SHA256 7f60ab18e2965d024b7a36327577bcc771061f2cfac221ed475a6fd6b2ab89c7
-DIST genpatches-3.3-6.base.tar.bz2 159919 RMD160 dc0098f7bca982371293992e59dfbadfe201714c SHA1 9b60161fc26849d9c5761321402e8eabecf22df3 SHA256 4dcd1ebef4f0cd788f2db247b448657936a4ab9109843057489191ccf004e5da
-DIST genpatches-3.3-6.extras.tar.bz2 17205 RMD160 eb3141c66ffb16282c2e2ef0fb5227a13172464d SHA1 4376fe5995aaa058cdd9081c003aeef56d099b5e SHA256 9356a196eb8aa74110165bc9d04674785693393c34f4a088d60bb0091ceb1bdc
-DIST genpatches-3.4-1.base.tar.bz2 5243 RMD160 ce2436bfc2d180e800b61b6688d7b33bd08b68da SHA1 5c08c5cf45e5ceb3e4dce257df43c4c46d770236 SHA256 7712de2fd86e583bc3625759067150df41c800617c02c732b0821837c55c7743
-DIST genpatches-3.4-1.extras.tar.bz2 17508 RMD160 b8b83573526b50f38768bb9b51d9ed0941de2dfd SHA1 413a4d2cb7adaab147488a69941f9c4a4731a3c1 SHA256 be8e087b3a0508e88bd36d2d4bec07e0756a3e7f7b31de4dbfd51d79412c2a96
-DIST linux-3.0.tar.bz2 76753134 RMD160 e20c9564ec0c8128e28a4c038986d4d93bbe34bb SHA1 45b64bffc860f70ab7956da4493c488010714650 SHA256 64b0228b54ce39b0b2df086109a7b737cde58e3df4f779506ddcaccee90356a0
-DIST linux-3.1.tar.bz2 77190238 RMD160 f9a3ce57b9f20a1402ef340792d3c223140ce1d2 SHA1 ac792701561b1cd4279302b8bb8f474731762ad1 SHA256 2573d2378c754b0c602b57586e9311e5b38c5d1e6c137f02873833633a4b9359
-DIST linux-3.2.tar.bz2 78147838 RMD160 15eb022305dfc8b0e1d59e396911fa86eb9c3bdf SHA1 3460afa971049aa79b8f914e1bfd619eedd19f55 SHA256 c881fc2b53cf0da7ca4538aa44623a7de043a41f76fd5d0f51a31f6ed699d463
-DIST linux-3.3.tar.bz2 78963640 RMD160 2bdb25e5af4549a43d8b202508b85837005146e5 SHA1 dc10fd59e5afbe0f74de06862435dd8bed07ca6a SHA256 8fd669b4e48181b8d44644a45bf421a84bb8d5ec273ef36349796443e442f333
-DIST linux-3.4.tar.bz2 80173484 RMD160 e0bcaa53b6eb3de9498f51b2c8b90d6c52d54889 SHA1 dfc54e7fbee81f77aba85d3d8ff2d992e1e49573 SHA256 a797a15d0b6228381507c14ecf4eec4a6cc5c77cfd521ba3b3e1325e85b5b16d
-EBUILD lh-sources-3.0.17-r2.ebuild 928 RMD160 ce4c22c0b787e0abbaba96f845be699c224e5576 SHA1 55e2abe572b112ec42eb21ba03f8a011ff94e452 SHA256 1975b5500ad57537cb8819b93761bd623a865084729cef933bbac8aa828c2646
-EBUILD lh-sources-3.1.10-r1.ebuild 928 RMD160 375b4a03e9524e0df774e10915da3164d1801d55 SHA1 3ee16336903aa30b7cc3c6ef5c64b9a1ae0e6177 SHA256 fdd9928024f2e0ac51e88878b19e8e0a7a711a32e4f5e6ca81ac70e77e1c8ee2
-EBUILD lh-sources-3.2.11.ebuild 934 RMD160 3ea29e45401a831f9482d6bac88df3de750b94bf SHA1 a4ac149fee7865a5e8585908ec01b42e761cbed5 SHA256 a9a1f1f4547b900278289165014436fee7e06b9b1e997f1d0f6fd3b318d91ca3
-EBUILD lh-sources-3.3.5.ebuild 927 RMD160 78215506aacb0e6ffa78a02be46d3451a690e6ab SHA1 75c21562317cd8757b0fbb4d72e339222ed3431d SHA256 0b3abcfd0de84f5a766fb94f4d6cda0c9f50e554b044f25468a4161a6e58d24f
-EBUILD lh-sources-3.4.0.ebuild 927 RMD160 78b1e322d366de0393cd29c65c1abd4ed80ec09a SHA1 b791b4e10cf8f8b511988bf4c9e2a2a917351370 SHA256 d113e4e7ded2c3e886a1d965cf3f1067aac0ec84a0279b5cd3a703029b6fc577
-MISC ChangeLog 10102 RMD160 f1a22e64aa477cbe8608dec799cd6e07c81acbd3 SHA1 a5ab935d684b3c50a40b7fcfb3c3b2ad6f9484d7 SHA256 19eb5c1343e92a5091d9c081767005274ac868f4644c4604fadadd86611c1bef
-MISC metadata.xml 322 RMD160 a52cf0e8c44c43c1e00f471819402a7c285d556b SHA1 de7633ea96633b285db9a303a5e390816f17b991 SHA256 576a908a4ed2228217d564ba7c2e1b3173ceacfc88258073d9b07698746870dc
+DIST deblob-check-3.4 448778 SHA256 28ce952c082e765784f9e5b63f5a3a4fb93545e5e788dc94d094c0b3ae8ea3a0 SHA512 f8f47a0adcc1b9a16c155d89d72d91a02d47bdbb3ac3a353be3873dc868fa44451367b7bb3906817d1ca8f51b64c99ce381d2fa3121582b70c7c2efb18dfc579 WHIRLPOOL 37d219204e15e0c81ac43faed93f7a5051735c474efb2b5167117cd463fbe81167267b756e8ce546447a30ad5bac651c943401ed98ec61713e20af89aa4fb957
+DIST genpatches-3.0-18.base.tar.bz2 418620 SHA256 f530f6caae05a06ae04817e4ce3e696154571f219446e20d404addc9208cce79 SHA512 98d1199353c7c5d1b035715f683489f4b3fad7b5b4bac5779bf867ee81f52abd82387251bc5945f1c841728bef5887bdc3f4c684c06d96f4dd482e4ed57ac86b WHIRLPOOL fd8e7a869d03d69ffaa7483ae53a3fc1d0a83cc659048c609c347035dd440395909a8318b1e8741056185dc8e3199f70a71b7d943fcf9b0fd008399ea58d29a2
+DIST genpatches-3.0-18.extras.tar.bz2 17193 SHA256 86c7a9d4ee419f21b63bfa23b52feb9c4b547a1b29498a752620336776aaff91 SHA512 881140d7c2f8a405a6dc99f99e7ca406877410e7fd19ecf04bc8776d9d594688f6f23a9fc473284c6ae78e44d0c825ef39e705eab70c2f3ec7b6b40feba4bd1a WHIRLPOOL f72f0bd1694369f1fa0a1d74a17447421cbcd9f499f658eb500b5a2405824ef4a36748a83d4164d34c5c9eaca85eb1f526f8604e31ceae1e7b32d305e21bd237
+DIST genpatches-3.1-10.base.tar.bz2 180217 SHA256 d5d0b9e2689a5326028e27ef75f93253762c20e157de73d3ad856d44b6295c76 SHA512 76b1f165b5b954b070a6b8909aab7d3d7763cec451143faa24d73f8bb5fd6fd65acb642cd7da6b4cd62a6b9627ade563e731f94b3a1e552311c190172ff453ba WHIRLPOOL 51e428971f2ff6dd0257f5d5e3e2cdbaa4711086516d8ac3651679c2551b7bf31b327a9bb7982b9e73037988614d7dae94697e3b82df13409075420c8f61340a
+DIST genpatches-3.1-10.extras.tar.bz2 17200 SHA256 b108dbf3b5ddad1701cacd2f1c936a63b60d1a4cd86fd7f9311230e3bacac56b SHA512 4b11441a840f69008f4042936ce6e53028197791505e2cda9b88e576ad7fee064fe22ad26febdce9a02aa5e7a0b7f891c2eb0d90bcb126402af1de427f8a9f2b WHIRLPOOL e9408ee404fec8936c0bb5de02fd851cc5ca6575168fa4e23d4bba23b42861d7435c53cab513f4bf8df53945f4e39f17a16cbab8b0bca3a0ec5c5bf3e28b2fd7
+DIST genpatches-3.2-11.base.tar.bz2 210269 SHA256 22eb160b9c3bf1fd04f6ab5a5e481ead4054c2a42ce274354b03a34bca1bc341 SHA512 3836193c64cdba963b9a4f278891e4224a6ffa93f23e834cdd3781ef176ec0ab6a0a8a1b687011d686fd9a74332b412b07e51b13a19fcb21ca45d74a8bb0793f WHIRLPOOL f112e425edae545e6b0dcd4aae03ee8ad1465b5fc69df09b840cacfb42a063ed5fbaf706326c8729544eebd77538f62ff13611ef8c4cbaa2855b663812a65586
+DIST genpatches-3.2-11.extras.tar.bz2 17208 SHA256 7f60ab18e2965d024b7a36327577bcc771061f2cfac221ed475a6fd6b2ab89c7 SHA512 bea678f7eb56eb992c99d9c49b8d1602228dec00e7fd255432ca30847aae9d4d223bb9ab27f5e72ad422e0d0f2ac319fa590d5fe0e53824b415d6d8bba686add WHIRLPOOL 875f72ab9b81e1cc7a7a06d42783c04204987cfd49042f3cf19b1ed80b0d91f8fdaaf13152b7a22a0d0c1eb9a22719d83eaa9c4fcf9d2024e62420332f081019
+DIST genpatches-3.3-6.base.tar.bz2 159919 SHA256 4dcd1ebef4f0cd788f2db247b448657936a4ab9109843057489191ccf004e5da SHA512 99fb0f2a64e6906d4b39ebafe8d68144a4b69e8528c66358c66eae7cbf909857bfbc0398c9af7eade5e2e92b266636bc8fc8604c060e4f05e070a5df95fc0c5e WHIRLPOOL ef7cdab2205b2a9a65aa6a42ef08e39e27fad2670d5ae4341774b2fa2eabc20bf9a5e3a815cf09c68f0803e3ddb27a0f477b5bbaf6730fa84b92af5287f47267
+DIST genpatches-3.3-6.extras.tar.bz2 17205 SHA256 9356a196eb8aa74110165bc9d04674785693393c34f4a088d60bb0091ceb1bdc SHA512 f3a3be26e3b262773ab214ff251eacd2c21ab6434c75a81b0ae2c725016aba234b858f40a4634a9a28c33868c15b544b5ddf8bf73153ffed79c382793f86d21a WHIRLPOOL af9f4c751c4be08d79fdd56f94153973f40d5e2c110e653c007af7763e384f4fa8d93f4ae1ed4d9324b116cc7b690d182e9e978161270294aa61d8cecf60fa9f
+DIST genpatches-3.4-1.base.tar.bz2 5243 SHA256 7712de2fd86e583bc3625759067150df41c800617c02c732b0821837c55c7743 SHA512 0a65bc3b5255c0ebdb876ceb4f08bd3c82d8038a6cbc03ad2fdc56dcb5b98ca218073dbe0254a3409e44a543076c4560b994bd7f86e423798c75db0e81a71ca2 WHIRLPOOL cbc14a7b89f1bd2812dcd87fd7a96a4400a2ad5d64ea1f32079ab759ee128ca414d02f83a4462efb2fe503f90a37ed873986a0d2c03ef7f0f5ab769efbfcb227
+DIST genpatches-3.4-1.extras.tar.bz2 17508 SHA256 be8e087b3a0508e88bd36d2d4bec07e0756a3e7f7b31de4dbfd51d79412c2a96 SHA512 f84be04008f254509de7eb05c78fe040fa563038e8ba2744412296a54208c7889417f72ada0db8b21754e2db544fb921b75300728d48337bdc7a7dfa02cdcf26 WHIRLPOOL b0331d32d4ef74fd2357dfc2dc046562828f9bbbbd175412276d79d4097a11a6c91847ba364d8e84ffee361bfd868161951ae740ee232504d1ae4fbb9d87f74e
+DIST genpatches-3.4-2.base.tar.bz2 53731 SHA256 165de5663fc5f600777744d9614cdfad9a4f96c07e56660f5f956375df2b1053 SHA512 a971ee3b46315da7e6e12d3a7c5a9688c855b7bbff3226cb0d5632e885bc2ec753b83a88667b539dcb73f0d9d96c1f3453c4aeb4a5c4e6dcfe03085556dcc70c WHIRLPOOL f9c7f4283ca2d0fee64791037c135eb0449c47322ea9917eaee5c57b923994e5e890d7dc28f0e325ef0eb5bbb1f83ee3c29d39d48440e92623b2fc6741a357f7
+DIST genpatches-3.4-2.extras.tar.bz2 17502 SHA256 2b537431a408445cd1091562755234e840016f26ad63ab3a73812ac7f7e1c8d9 SHA512 29ca4fc4de0c1c87eabb2fa55ae856721ac10a4d70758efa9d90379f0b0b0c9def9cabcb50601a1d128471cf97d891ed0965486c85b4dc06dd9ac4058ed78ce4 WHIRLPOOL de947d2d305d79250922795c094db3d4a90d295d28e819fbf2c1c207ba365bf6cd194eb315935fa52f4b8cd135049d9838aad00cb52e7e4802ebbbd87eea61ab
+DIST linux-3.0.tar.bz2 76753134 SHA256 64b0228b54ce39b0b2df086109a7b737cde58e3df4f779506ddcaccee90356a0 SHA512 4a87bba5f62945d226d8c0059d38e6354ad8cd379b8d7936f934a3868a69c6a4c724aad56d974966e8ef1de45f1e0bbe628cb15fc568b6f8cfc63dbc8104bc9d WHIRLPOOL 4bf0a38a623797be81eadaa4b102f9ea1da31edab9aa9e886577bfda79ffd6e105fff702438c2e1350cbb005f9e7594be8e07fe76ad36b1c28ef94184b6edf9f
+DIST linux-3.1.tar.bz2 77190238 SHA256 2573d2378c754b0c602b57586e9311e5b38c5d1e6c137f02873833633a4b9359 SHA512 131b814325d888bb11ba552bc5bdd91ee2d8e139b06ac7ba94e716bcbbcc99ba30867eeea4aab580907916203bc526ae0bccda688151b250ba7943e193e50252 WHIRLPOOL d224dd52c7133e9768817319d0ad0d3797d426180b4d3d936d5189b500521ac4abe4abae7cc71f055d7e5194171f549b6fdb0221ae023cb35b16993741ad1e61
+DIST linux-3.2.tar.bz2 78147838 SHA256 c881fc2b53cf0da7ca4538aa44623a7de043a41f76fd5d0f51a31f6ed699d463 SHA512 1f57b98e8da34b10f37ce94e0f13a994c111d483b104c27a8f58a4a55013a73a9f1ffcebb597be63ce0dfadb92201e93b0e072ba49bac0033026aceb0840c812 WHIRLPOOL 3dc893bde09f064e4614183964a4b9feaab938ca7a739f46f825818a577884eae815f195b52a4c55c571345de59d7ba09631fb68dac481a0837b24868ce60e3d
+DIST linux-3.3.tar.bz2 78963640 SHA256 8fd669b4e48181b8d44644a45bf421a84bb8d5ec273ef36349796443e442f333 SHA512 dcb99e48827d6b022fe75cbc4cd8079adf6b2ca3dae7964a34ac3a8a6374f6ced44047abc4ce814bbe2fb537ab003911563962eb3cb6c7e98788d9277dd716df WHIRLPOOL 4895be5e6301f7359807482711242efc1d2a8850641b7b584fba9f12785ef9241520687ad28c79a2d39ba5abc4f371f1f080305e416a175200b4a58c59c0d86f
+DIST linux-3.4.tar.bz2 80173484 SHA256 a797a15d0b6228381507c14ecf4eec4a6cc5c77cfd521ba3b3e1325e85b5b16d SHA512 597002fa82b70b5052f9e05c1d8547bc5f89d8e1aecfd1765f4033f6d2c5c02d51b6372dbeef12c2eb070ae318a04c39925050cb37a39399961c8b263479fca1 WHIRLPOOL 57e6dd7094db2bc41175d7bb551e8237ea96eacf3710a734e8413915c54304e84ca11455e41c7752882ce81048459555d44d1798bf0775b79c3d74b13aa3a9f2
+EBUILD lh-sources-3.0.17-r2.ebuild 928 SHA256 1975b5500ad57537cb8819b93761bd623a865084729cef933bbac8aa828c2646 SHA512 c646f110e5a6317beddc3555e6364cbe6b95b9a5a10a2c43deeef82421c4c39e449d8bcf66df307fa94e6ca0ffbbe6941d1a8448e715a324ba2ee980a0bb4727 WHIRLPOOL bbfa601299bbede26cb3ae845df066b311fec0ca6b399b4f0a4e910d069d64d4142659f70d4946f49ef945d9d1592626b88d3b13908b263e1243e27b2c44b9bc
+EBUILD lh-sources-3.1.10-r1.ebuild 928 SHA256 fdd9928024f2e0ac51e88878b19e8e0a7a711a32e4f5e6ca81ac70e77e1c8ee2 SHA512 dd014ca959e4344443b93c03c662ca5dd19ebdbce796b9b30d1fa91ef1ccaf3cb698a6c8cc08de75a65c85f01fdc2487922a777c92c804e28e3aab5c599d537f WHIRLPOOL 17183c184b493cb7fd4c1ff1007d507af5d5e936950786f713eb0477d974852e96b6c150d91f593e429b81237a02b19009ce1a85aa1f37ba9bdfcca332eb5471
+EBUILD lh-sources-3.2.11.ebuild 934 SHA256 a9a1f1f4547b900278289165014436fee7e06b9b1e997f1d0f6fd3b318d91ca3 SHA512 37060e17574a4b73d0cf25a953f0d0b3420c50115eef7ae8741db9873726733413cd4e344b07d26e5aee785807dd18b7f7d91ed01a1394654e8951e3d227c6d1 WHIRLPOOL c0d814b23668fe7a77124902b0eb2d4c332bc237578f637f0b5b7875d48b3efc461c8269cc81aa14bf8b677155e136e8b2e659615845199b50b4af13f8bd0f92
+EBUILD lh-sources-3.3.5.ebuild 927 SHA256 0b3abcfd0de84f5a766fb94f4d6cda0c9f50e554b044f25468a4161a6e58d24f SHA512 1f22c1c5f5395b83701790b0cfb7aaa2c53a5f10284a8849870bd260a9f4abbfc6973682945d10cfdf33827ac658722a76d1909c0e11b73c75f87fe68a5e3bc0 WHIRLPOOL 22e6e23f480e51767d8876a828a21e9933b000850bc9e58d1ff54af0638cb63d6995f096e9518f554973fbfbfaf9d9667c2a93e9f9718a0e279cf394dbd868d9
+EBUILD lh-sources-3.4.0.ebuild 927 SHA256 d113e4e7ded2c3e886a1d965cf3f1067aac0ec84a0279b5cd3a703029b6fc577 SHA512 de7a52eaeae97540a78ce7dceeaf7caa40ebee7c89abd2bcd5d03bd87392b4ebeeac6c06e0dbda875b493c4d5af66d7001b6ac70585b620bf131726b4a0c2f4c WHIRLPOOL c0b9b4ce7d60b4c92991c51325a79b30d0808c1df1de76d51cca8ffc0b13601b03382bc40724f48e0c23745007d90528da45be753998d75674a4b2c38e212105
+EBUILD lh-sources-3.4.2.ebuild 927 SHA256 5453b3a7b227e64c8cfcde1315a08af0a420287a665845a732004c60466c8211 SHA512 e54fb1a02d6e90aa8ff2a8e114e541c39636a8bed6db1bfa1edce517ec101dddee3ad436484528c8286a4884c9c40643fe71e4ef5f5f94ebf7a9a5f2046e13db WHIRLPOOL bb0422dca7b8455237faafb24c1d582bb280ca1e464642480f5e570c9afb00a3e605ee0ce6a990ae83f44221d581d1910ea47434a7e3d8c0212b6443408710c4
+MISC ChangeLog 10224 SHA256 c87b1bcad50e692a9fd942343e014068ecedadde81ca680bb3c708744cb5c163 SHA512 7c9ad62361e879818d4d24ad761a88852e8459e74c51ab1080ed2b95af604c8efb12beb6ce1163e03406ef2c7d1e3cbd7067582233335a179804ddd138ba6c6f WHIRLPOOL 563b4c616b8f5ee849b3f580f10f1e8e2992870c2f7c8fc72e137ad7761508c9a4b8526ed7642c6138d4c41e68f031a8754fe685f28f4495a7d447a7936b56e4
+MISC metadata.xml 322 SHA256 576a908a4ed2228217d564ba7c2e1b3173ceacfc88258073d9b07698746870dc SHA512 001fce1594b001c9864d86024c45a1560b651e7dda5d81ad8190ea62c88ad48d79867a66cceb2e108e35d6c7d386799d5a3a9d705c8c3beb0c26cdb9b3b94007 WHIRLPOOL 8b233ac46194ab42d98d89be79df6b7f21843923bb9502336a8504a2e5c4de5f3d908de11baf2cf48adf04ab1b16b034707a3d4a1d8746c29bbc9574cd7248cf
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 Comment: GPGTools - http://gpgtools.org
 
-iEYEAREKAAYFAk+7LsAACgkQgAnW8HDreRbPDACfcWmg/My0m84yCrAyaavjmUZF
-ZZYAn2zKusk05WUpRVDlR/Qk/IGuAZwV
-=hXOf
+iEYEAREKAAYFAk/XYkQACgkQgAnW8HDreRYSigCdEU7UJ9goqvq7dWv/WPhknXta
+tqQAnjlh/PFUO85CTX5ZewiIXsoYjMqT
+=+uUe
 -----END PGP SIGNATURE-----
