@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*lh-sources-3.4.2 (12 Jun 2012)
+
+  12 Jun 2012; Justin Lecher <jlec@gentoo.org> +lh-sources-3.4.2.ebuild:
+  Version BUmp
+
 *lh-sources-3.4.0 (22 May 2012)
 
   22 May 2012; Justin Lecher <jlec@gentoo.org> -lh-sources-3.3.0.ebuild,
